[gd_scene load_steps=12 format=3 uid="uid://cdgs64kqwboxn"]

[ext_resource type="Script" uid="uid://t5jbimre8hox" path="res://scripts/Book-component/book.gd" id="1_ce51h"]
[ext_resource type="Texture2D" uid="uid://crwivkdutveq0" path="res://images/book/cena_1.png" id="2_c4e1d"]
[ext_resource type="FontFile" uid="uid://bvq8edsvgdcoe" path="res://fonts/Handwriting-Regular.otf" id="3_pdvic"]
[ext_resource type="AudioStream" uid="uid://dg0lwioayalea" path="res://musics/BookFlip11.wav" id="4_t7qp1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udo5r"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4chiv"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ph5nd"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="Animation" id="Animation_ph5nd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2/Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_udo5r"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2/Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4chiv"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2/Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4chiv"]
_data = {
&"RESET": SubResource("Animation_ph5nd"),
&"fade_in": SubResource("Animation_udo5r"),
&"fade_out": SubResource("Animation_4chiv")
}

[node name="Book" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ce51h")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_udo5r")

[node name="Image" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c4e1d")
expand_mode = 4
stretch_mode = 5

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -1.0
offset_right = -33.0
offset_bottom = -1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4chiv")

[node name="Text" type="RichTextLabel" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 323.0
offset_top = 377.0
offset_right = 278.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("3_pdvic")
theme_override_font_sizes/normal_font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ph5nd")
text = "asfsgsgasdbasdgaavdbag"

[node name="NextButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -137.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_pdvic")
theme_override_font_sizes/font_size = 32
text = "Next Page"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4chiv")
}

[node name="SomLivro" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_t7qp1")

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
